--- a/HelpDeskTool/MainWindow.xaml
+++ b/HelpDeskTool/MainWindow.xaml
@@ -9,7 +9,7 @@
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
             <GradientStop Color="White" Offset="0.248"/>
-            <GradientStop Color="#FF41D84A" Offset="1"/>
+            <GradientStop Color="Yellow" Offset="1"/>
         </LinearGradientBrush>
     </Window.Background>
     <Grid>
