--- a/HelpDeskTool/MainWindow.xaml
+++ b/HelpDeskTool/MainWindow.xaml
@@ -45,23 +45,23 @@
                 <Grid x:Name="ToolBox1" Background="#FFE5E5E5">
                     <Label x:Name="ADNameBox" Content="AD Name:" HorizontalAlignment="Left" Height="29" Margin="10,0,0,0" VerticalAlignment="Center" Width="84"/>
                     <TextBox x:Name="UserTextbox" HorizontalAlignment="Left" Height="18" Margin="94,0,0,0" VerticalAlignment="Center" Width="130" FontSize="11" TextWrapping="Wrap" Grid.IsSharedSizeScope="True" UseLayoutRounding="False" TabIndex="8"/>
-                    <Button x:Name="UserInfoButton" Content="User info" HorizontalAlignment="Left" Height="30" Margin="230,0,0,0" VerticalAlignment="Center" Width="60" Click="UserInfoButton_Click" RenderTransformOrigin="0.021,0.544" TabIndex="9"/>
+                    <Button x:Name="UserInfoButton" Content="User info" HorizontalAlignment="Left" Height="30" Margin="230,0,0,0" VerticalAlignment="Center" Width="60" Click="UserInfoButton_Click" RenderTransformOrigin="0.021,0.544" TabIndex="9" FontSize="11"/>
                     <Button x:Name="MemberOfButton" Content="Member of" HorizontalAlignment="Left" Height="30" Margin="295,0,0,0" VerticalAlignment="Center" Width="60" Click="MemberOfButton_Click" FontSize="11" TabIndex="10"/>
-                    <Button x:Name="GroupMembersButton" Content="Members" HorizontalAlignment="Left" Height="30" Margin="425,0,0,0" VerticalAlignment="Center" Width="60" Click="GroupMembersButton_Click" TabIndex="12"/>
-                    <Button x:Name="GroupInfoButton" Content="Group info" HorizontalAlignment="Left" Height="30" Margin="360,0,0,0" VerticalAlignment="Center" Width="60" Click="GroupInfoButton_Click" RenderTransformOrigin="0.021,0.544" TabIndex="11"/>
-                    <Button x:Name="LockoutToolButton" Content="Bad PWDs" HorizontalAlignment="Left" Height="30" Margin="490,0,0,0" VerticalAlignment="Center" Width="60" Click="LockoutToolButton_Click" FontSize="9" TabIndex="15"/>
+                    <Button x:Name="GroupMembersButton" Content="Members" HorizontalAlignment="Left" Height="30" Margin="425,0,0,0" VerticalAlignment="Center" Width="60" Click="GroupMembersButton_Click" TabIndex="12" FontSize="11"/>
+                    <Button x:Name="GroupInfoButton" Content="Group info" HorizontalAlignment="Left" Height="30" Margin="360,0,0,0" VerticalAlignment="Center" Width="60" Click="GroupInfoButton_Click" RenderTransformOrigin="0.021,0.544" TabIndex="11" FontSize="11"/>
+                    <Button x:Name="LockoutToolButton" Content="Bad PWDs" HorizontalAlignment="Left" Height="30" Margin="490,0,0,0" VerticalAlignment="Center" Width="60" Click="LockoutToolButton_Click" FontSize="11" TabIndex="15"/>
                     <Button x:Name="AddgroupButton" Content="Add/Remove&#xA;Group" HorizontalAlignment="Left" Height="30" Margin="555,0,0,0" VerticalAlignment="Center" Width="60" Click="AddgroupButton_Click" FontSize="9" TabIndex="13"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="ToolTab2" Header="Computer Tools" Height="22">
                 <Grid x:Name="ToolBox2" Background="#FFE5E5E5">
                     <Label x:Name="PCNameBox" Content="PC Name/IP:" HorizontalAlignment="Left" Height="30" Margin="10,0,0,0" VerticalAlignment="Center" Width="84"/>
-                    <TextBox x:Name="NameBox" HorizontalAlignment="Left" Margin="94,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="130" Height="17" HorizontalScrollBarVisibility="Disabled" FontSize="11" TabIndex="1"/>
-                    <Button x:Name="RestartButton" Content="Restart" HorizontalAlignment="Left" Height="30" Margin="230,0,0,0" VerticalAlignment="Center" Width="60" Click="RestartButton_Click" TabIndex="2"/>
-                    <Button x:Name="PingButton" Content="Ping" HorizontalAlignment="Left" Height="30" Margin="295,0,0,0" VerticalAlignment="Center" Width="60" Click="PingButton_Click" TabIndex="3"/>
-                    <Button x:Name="NslookupButton" Content="nslookup" HorizontalAlignment="Left" Height="30" Margin="425,0,0,0" VerticalAlignment="Center" Width="60" Click="NslookupButton_Click" TabIndex="5"/>
-                    <Button x:Name="SysinfoButton" Content="Sys. info" HorizontalAlignment="Left" Height="30" Margin="360,0,0,0" VerticalAlignment="Center" Width="60" Click="SysinfoButton_Click" TabIndex="4"/>
-                    <Button x:Name="RemoteButton" Content="Remote in" HorizontalAlignment="Left" Height="30" Margin="490,0,0,0" VerticalAlignment="Center" Width="60" Click="RemoteButton_Click" TabIndex="6"/>
+                    <TextBox x:Name="NameBox" HorizontalAlignment="Left" Margin="94,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="130" Height="18" HorizontalScrollBarVisibility="Disabled" FontSize="11" TabIndex="1"/>
+                    <Button x:Name="RestartButton" Content="Restart" HorizontalAlignment="Left" Height="30" Margin="230,0,0,0" VerticalAlignment="Center" Width="60" Click="RestartButton_Click" TabIndex="2" FontSize="11"/>
+                    <Button x:Name="PingButton" Content="Ping" HorizontalAlignment="Left" Height="30" Margin="295,0,0,0" VerticalAlignment="Center" Width="60" Click="PingButton_Click" TabIndex="3" FontSize="11"/>
+                    <Button x:Name="NslookupButton" Content="nslookup" HorizontalAlignment="Left" Height="30" Margin="425,0,0,0" VerticalAlignment="Center" Width="60" Click="NslookupButton_Click" TabIndex="5" FontSize="11"/>
+                    <Button x:Name="SysinfoButton" Content="Sys. info" HorizontalAlignment="Left" Height="30" Margin="360,0,0,0" VerticalAlignment="Center" Width="60" Click="SysinfoButton_Click" TabIndex="4" FontSize="11"/>
+                    <Button x:Name="RemoteButton" Content="Remote in" HorizontalAlignment="Left" Height="30" Margin="490,0,0,0" VerticalAlignment="Center" Width="60" Click="RemoteButton_Click" TabIndex="6" FontSize="11"/>
                     <Button x:Name="ComputerInfoButton" Content="AD PC info" HorizontalAlignment="Left" Height="30" Margin="555,0,0,0" VerticalAlignment="Center" Width="60" Click="ComputerInfoButton_Click" FontSize="11" TabIndex="7"/>
                 </Grid>
             </TabItem>
