--- a/HelpDeskTool/AddRemoveWindow.xaml
+++ b/HelpDeskTool/AddRemoveWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:DTTool"
         mc:Ignorable="d"
         Title="Add/Remove" Height="360" Width="752" ResizeMode="NoResize" Background="#FF989898">
-    <Grid>
+    <Grid Background="#FF525252">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
@@ -28,14 +28,14 @@
         </Button>
         <Label Content="Enter Username(s)" HorizontalAlignment="Left" Height="29" Margin="37,7,0,0" VerticalAlignment="Top" Width="108"/>
         <Label Content="Enter AD Group(s):" HorizontalAlignment="Center" Height="29" Margin="0,7,0,0" VerticalAlignment="Top" Width="114"/>
-        <RichTextBox x:Name="ARusernameBox" TextBlock.LineHeight=".5" HorizontalAlignment="Left" Height="224" Margin="37,36,0,0" VerticalAlignment="Top" Width="242" BorderBrush="#FF4A4A4A" Background="#FF636363">
+        <RichTextBox x:Name="ARusernameBox" TextBlock.LineHeight=".5" HorizontalAlignment="Left" Height="224" Margin="37,36,0,0" VerticalAlignment="Top" Width="242" BorderBrush="#FF4A4A4A" Background="#FF9A9A9A">
             <FlowDocument>
                 <Paragraph>
                     <Run Text=""/>
                 </Paragraph>
             </FlowDocument>
         </RichTextBox>
-        <RichTextBox x:Name="ARgroupBox" TextBlock.LineHeight=".5" HorizontalAlignment="Left" Height="224" Margin="307,36,0,0" VerticalAlignment="Top" Width="238" BorderBrush="#FF4A4A4A" Background="#FF636363">
+        <RichTextBox x:Name="ARgroupBox" TextBlock.LineHeight=".5" HorizontalAlignment="Left" Height="224" Margin="307,36,0,0" VerticalAlignment="Top" Width="238" BorderBrush="#FF4A4A4A" Background="#FF9A9A9A">
             <FlowDocument>
                 <Paragraph>
                     <Run Text=""/>
