--- a/HelpDeskTool/MainWindow.xaml
+++ b/HelpDeskTool/MainWindow.xaml
@@ -23,7 +23,7 @@
             <Border.BorderBrush>
                 <SolidColorBrush Color="Black" Opacity="0"/>
             </Border.BorderBrush>
-            <RichTextBox x:Name="OutputBox" Margin="19,17,19,9" IsReadOnly="True" TextBlock.LineHeight="1" HorizontalScrollBarVisibility="Auto" Width="2000">
+            <RichTextBox x:Name="OutputBox" Margin="19,17,19,9" IsReadOnly="True" TextBlock.LineHeight="1" HorizontalScrollBarVisibility="Auto" Width="2000" FontFamily="Cascadia Mono">
                 <FlowDocument>
                     <Paragraph>
                         <Run Text=""/>
