--- a/HelpDeskTool/LoadingWindow.xaml
+++ b/HelpDeskTool/LoadingWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d" Height="94" Width="201">
     <Grid>
         <Label Content="Processing..." HorizontalAlignment="Center" Height="29" Margin="0,10,0,0" VerticalAlignment="Top" Width="80" FontWeight="Bold"/>
+        <ProgressBar HorizontalAlignment="Center" Height="10" Margin="0,36,0,0" VerticalAlignment="Top" Width="100" IsIndeterminate="True"/>
 
     </Grid>
 </Window>
