--- a/HelpDeskTool/MainWindow.xaml
+++ b/HelpDeskTool/MainWindow.xaml
@@ -35,6 +35,9 @@
         <Button x:Name="HelpButton" Content="Help" HorizontalAlignment="Right" Height="30" Margin="0,155,20,0" VerticalAlignment="Top" Width="60" Click="HelpButton_Click" FontSize="11" TabIndex="102"/>
         <Button x:Name="ExportButton" Content="Export" HorizontalAlignment="Right" Height="30" Margin="0,185,20,0" VerticalAlignment="Top" Width="60" Click="ExportButton_Click" FontSize="11" TabIndex="103"/>
         <TabControl Height="100" VerticalAlignment="Top" Margin="19,6,19,0" Foreground="Black">
+            <TabControl.Background>
+                <SolidColorBrush Color="White" Opacity="0"/>
+            </TabControl.Background>
             <TabItem x:Name="ToolTab1" Header="User/Group Tools" Height="22">
                 <TabItem.Background>
                     <LinearGradientBrush EndPoint="0,1">
