Adding full search in for more results

--- a/HelpDeskTool/MainWindow.xaml
+++ b/HelpDeskTool/MainWindow.xaml
@@ -74,8 +74,9 @@
                     <CheckBox x:Name="URDomainCB" Content="UR Domain" HorizontalAlignment="Left" Margin="6,43,0,0" VerticalAlignment="Top" Height="16" IsChecked="True" TabIndex="3"/>
                     <CheckBox x:Name="PrintersCB" Content="Printers" HorizontalAlignment="Left" Height="16" Margin="115,42,0,0" VerticalAlignment="Top" Width="80" IsChecked="True" TabIndex="4"/>
                     <CheckBox x:Name="SharedDriveCB" Content="Shared Drives" HorizontalAlignment="Left" Height="16" Margin="115,10,0,0" VerticalAlignment="Top" IsChecked="True" TabIndex="2"/>
-                    <TextBox x:Name="MasterSearchBox" HorizontalAlignment="Left" Height="18" TextWrapping="Wrap" VerticalAlignment="Center" Width="240" FontSize="11" Margin="243,0,0,0" TabIndex="5" KeyUp="FuzzySearch"/>
-                    <Label Content="Type at least 4 characters to&#xA;start searching.&#xD;&#xA;Shows 10 results in each section" HorizontalAlignment="Left" Height="70" Margin="507,0,0,0" VerticalAlignment="Center" Width="185" Foreground="#FF545454"/>
+                    <TextBox x:Name="MasterSearchBox" HorizontalAlignment="Left" Height="18" TextWrapping="Wrap" VerticalAlignment="Center" Width="140" FontSize="11" Margin="243,0,0,0" TabIndex="5" KeyUp="FuzzySearch"/>
+                    <Label Content="Type at least 4 characters to&#xA;start searching.&#xD;&#xA;Shows 10 results in each section" HorizontalAlignment="Left" Height="70" Margin="388,0,0,0" VerticalAlignment="Center" Width="185" Foreground="#FF545454" VerticalContentAlignment="Center"/>
+                    <Button x:Name="MasterSearchButton" Content="Full Search" HorizontalAlignment="Left" Height="30" Margin="630,0,0,0" VerticalAlignment="Center" Width="60" FontSize="11" Click="MasterSearchButton_Click"/>
                 </Grid>
             </TabItem>
             <TabItem x:Name="ToolTab5" Header="Settings" Height="22">
